Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/enum/LocalEnum.out
- compiler.warn.source.no.system.modules.path: 15
LocalEnum.java:12:9: compiler.err.local.enum
1 error
1 warning
